png の背景を透過させないようにした

--- a/ja-edited/03_Basic_Math_for_Machine_Learning.ipynb
+++ b/ja-edited/03_Basic_Math_for_Machine_Learning.ipynb
@@ -15,6 +15,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -51,14 +52,13 @@
     "$$\n",
     "f(x) = wx + b\n",
     "\\tag{2.1}\n",
-    "\\label{line}\n",
     "$$\n",
     "\n",
     "![line](images/01/01_line.png)\n",
     "\n",
     "これは、1 つの入力 $x$ を与えると 1 つの出力を返す関数 $f$ を表していて、この関数は傾き $w$ と切片 $b$ の **2 つのパラメータで特徴づけられています。**\n",
     "上の図は、$w = 0.5$、$b = 50$ の場合を表しています。\n",
-    "ここで、初めの図にあった赤い点の集まりに見られる $x$ と $t$ の関係を、うまく式 $\\eqref{line}$ の直線によって近似することを考えてみましょう。\n",
+    "ここで、初めの図にあった赤い点の集まりに見られる $x$ と $t$ の関係を、うまく式 $(2.1)$ の直線によって近似することを考えてみましょう。\n",
     "\n",
     "この直線をそのまま赤い点の集まりの上におくと、以下のようになります。\n",
     "\n",
@@ -66,11 +66,11 @@
     "\n",
     "あまりうまく $x$ と $t$ の関係を表しているようには見えません。\n",
     "\n",
-    "式 $\\eqref{line}$ で表される直線は、$w$ と $b$ が決まると、どのような直線になるかが決定されます。\n",
+    "式 $(2.1)$ で表される直線は、$w$ と $b$ が決まると、どのような直線になるかが決定されます。\n",
     "つまり、この $w$ と $b$ の値をうまく決定して、赤い点の集まりにできるだけ沿うような直線を見つけることができれば、新しい $x$ が与えられたときに、$t$ の値がどのような値になりそうかを予測することができそうです。\n",
     "このとき、未知のデータに対しても精度良く予測が行えることを**汎化性能 (generalizability)** が高いと言います。\n",
     "\n",
-    "また、パラメータ $w$ と $b$ によって特徴づけられた直線の式  $\\eqref{line}$ のような、パラメータを使って何らかの計算を行うことで、与えられたデータの特徴や関係性を表すものを、以降簡単に**モデル (model)** と呼ぶことにします（[注釈1](#note1)）。\n",
+    "また、パラメータ $w$ と $b$ によって特徴づけられた直線の式  $(2.1)$ のような、パラメータを使って何らかの計算を行うことで、与えられたデータの特徴や関係性を表すものを、以降簡単に**モデル (model)** と呼ぶことにします（[注釈1](#note1)）。\n",
     "\n",
     "それでは、$x$ と $t$ の関係をよく表すモデルのパラメータ $w$ と $b$ は、どうやって決定すればよいのでしょうか。\n",
     "先程のように、人が赤い点の集まりを目で見て $x$ と $t$ の関係に当たりをつけ、最適な $w$ と $b$ の値を人手で探り当てるのは、赤い点がもし 3 次元空間や、4 次元、5 次元…といった人間には想像することが難しい高次元空間に散らばっていたら、目で見ることもできないため、困難になります。\n",
@@ -83,11 +83,11 @@
     "そのような指標を表す関数を**目的関数 (objective function)** と呼びます。\n",
     "\n",
     "ここで、上の直線の例に戻って考えてみましょう。\n",
-    "まず、式 $\\eqref{line}$ にある $x$ を与えると、$w$ と $b$ を使って $wx + b$ という計算が行われます。\n",
+    "まず、式 $(2.1)$ にある $x$ を与えると、$w$ と $b$ を使って $wx + b$ という計算が行われます。\n",
     "その結果を $y$ と表すことにします。\n",
     "ここで、$x$ を**入力変数 (input variable)**、$y$ を**出力変数 (output variable)** と呼びます。\n",
-    "今、上図の赤い点の集まりから 1 点を選び出し、その $x$ 座標の値を式 $\\eqref{line}$ に与えたとします。\n",
-    "このとき、式 $\\eqref{line}$ に与えられた具体的な $x$ の値を、**入力値 (input value)** と呼びます。\n",
+    "今、上図の赤い点の集まりから 1 点を選び出し、その $x$ 座標の値を式 $(2.1)$ に与えたとします。\n",
+    "このとき、式 $(2.1)$ に与えられた具体的な $x$ の値を、**入力値 (input value)** と呼びます。\n",
     "そして、パラメータ $w$ と $b$ を用いて計算を行った結果得られる具体的な $y$ の値を、**予測値 (predicted value)** と呼びます。\n",
     "このとき、直線の式ではなく、実際の赤い点の持つ $t$ の値は、この式が予測したい目標の値なので、**目標値 (target value)** と呼びます。\n",
     "\n",
@@ -105,7 +105,7 @@
     "この $x_1, x_2, \\dots, x_{200}$ から $t_1, t_2, \\dots, t_{200}$ を予測するのが目標でした。  \n",
     "つまり、$x_1, x_2, \\dots, x_{200}$ が入力値、$t_1, t_2, \\dots, t_{200}$ が目標値です。\n",
     "\n",
-    "そして、この 200 個の $x$ の値全てに対して、式 $\\eqref{line}$ による予測値 $y$ を計算した結果、$y_1, y_2, \\dots, y_{200}$ が得られたとします。\n",
+    "そして、この 200 個の $x$ の値全てに対して、式 $(2.1)$ による予測値 $y$ を計算した結果、$y_1, y_2, \\dots, y_{200}$ が得られたとします。\n",
     "\n",
     "このとき、これらの予測値の正確さを、対応する目標値との間の**差の二乗**によって測るのが、**二乗誤差関数 (squared error function)** と呼ばれるものです。\n",
     "\n",
