--- a/ja-edited/11_Introduction_to_Pandas_Exercise.ipynb
+++ b/ja-edited/11_Introduction_to_Pandas_Exercise.ipynb
@@ -489,9 +489,21 @@
    "metadata": {},
    "source": [
     "<details>\n",
-    "<summary>ヒント</summary>\n",
+    "<summary>ヒント1</summary>\n",
     "「pandas 要素ごと 集計」 などで今回使える機能に関する記事が見つかります。  \n",
-    "メソッド名は \"groupby\" です。"
+    "メソッド名は \"groupby\" です。\n",
+    "</details>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary>ヒント2</summary>\n",
+    "メソッド名は \"groupby\" です。\n",
+    "</details>"
    ]
   },
   {
@@ -680,9 +692,21 @@
    "metadata": {},
    "source": [
     "<details>\n",
-    "<summary>ヒント</summary>\n",
+    "<summary>ヒント1</summary>\n",
     "タイトル通り 「pandas DataFrame 結合」などと調べれば必要な機能に関する記事が見つかります。  \n",
-    "\"merge\"と\"join\"という似た機能が二つあります。\n"
+    "</details>\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary>ヒント2</summary>\n",
+    "\"merge\", \"join\"という似たメソッドがあります。  \n",
+    "今回の場合\"merge\"が便利でしょう。\n",
+    "</details>"
    ]
   },
   {
@@ -787,9 +811,19 @@
    "metadata": {},
    "source": [
     "<details>\n",
-    "<summary>ヒント</summary>\n",
-    "「pandas datetime」などで該当の機能が見つかるかと思います。\"pd.to_datetime\"です。\n",
-    "このメソッドを適用する際ですが、for文を使わずに実装しましょう。\n"
+    "<summary>ヒント1</summary>\n",
+    "「pandas datetime」などで該当の機能が見つかるかと思います。\n",
+    "</details>\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary>ヒント2</summary>\n",
+    "\"pd.to_datetime\"というメソッドが使えるでしょう。このメソッドを適用する際ですが、for文を使わずに実装しましょう。"
    ]
   },
   {
