jupyter book の設定

--- a/ja-edited/02_02_Basics_of_Python_control.ipynb
+++ b/ja-edited/02_02_Basics_of_Python_control.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "80fd6c81",
    "metadata": {
@@ -8,7 +9,7 @@
     "id": "zTYLayT3qEzA"
    },
    "source": [
-    "## 制御構文\n",
+    "# 制御構文\n",
     "\n",
     "複雑なプログラムを記述しようとすると、繰り返しの処理や、条件によって動作を変える処理が必要となります。\n",
     "これらは**制御構文**を用いて記述します。\n",
@@ -44,7 +45,7 @@
     "id": "oELnTpERNwCQ"
    },
    "source": [
-    "### 繰り返し（for 文）\n",
+    "## 繰り返し （for 文）\n",
     "\n",
     "同じ内容のメールを宛名だけ個別に変えて、1000 人に一斉送信したい場合など、繰り返す処理を記述する制御構文である `for` を使います。\n",
     "\n",
@@ -385,7 +386,7 @@
     "id": "WguFiYgqQnQT"
    },
    "source": [
-    "### 条件分岐（if 文）\n",
+    "## 条件分岐 （if 文）\n",
     "\n",
     "`if` は、指定した条件が `True` か `False` かによって、処理を変えるための制御構文です。\n",
     "\n",
@@ -497,7 +498,7 @@
     "id": "tZ15Hv9Gv9dY"
    },
    "source": [
-    "### 繰り返し（while 文）\n",
+    "## 繰り返し （while 文）\n",
     "\n",
     "繰り返し処理は、`for` 以外にも `while` を用いて記述することもできます。\n",
     "`while` 文では、以下のように**ループを継続する条件**を指定します。\n",
