--- a/ja-edited/99_Basics_of_Python_class.ipynb
+++ b/ja-edited/99_Basics_of_Python_class.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "240ae88f",
    "metadata": {
@@ -8,7 +9,7 @@
     "id": "FBe0bEnnVoE5"
    },
    "source": [
-    "## クラス\n",
+    "# クラス\n",
     "\n",
     "**オブジェクト指向プログラミング (object-oriented programming)** の特徴の一つである**クラス (class)** は、**オブジェクト (object)** を生成するための設計図にあたるものです。\n",
     "まず、クラスとは何か、オブジェクトとは何かについて説明します。\n",
@@ -23,6 +24,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9dbebe3a",
    "metadata": {
@@ -30,7 +32,7 @@
     "id": "M1XEvf6Kv9dw"
    },
    "source": [
-    "### クラスの定義\n",
+    "## クラスの定義\n",
     "\n",
     "それでは、家の設計図を表す `House` というクラスを定義してみましょう。\n",
     "`House` クラスには、インスタンス化されたあとに、各インスタンス、すなわち誰か特定の人の家ごとに異なる値を持つ、`name_plate` という変数を持たせてみます。\n",
@@ -205,6 +207,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a403d0a5",
    "metadata": {
@@ -212,7 +215,7 @@
     "id": "0M1dmJSacA7g"
    },
    "source": [
-    "### 継承\n",
+    "## 継承\n",
     "\n",
     "あるクラスを定義したら、その一部の機能を変更したり、新しい機能を付け足したりしたくなることがあります。\n",
     "これを実現する機能が**継承 (inheritance)** です。\n",
