--- a/ja-edited/02_03_Basics_of_Python_function.ipynb
+++ b/ja-edited/02_03_Basics_of_Python_function.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e4b7e3a2",
    "metadata": {
@@ -8,13 +9,14 @@
     "id": "e96zsBv7IfDn"
    },
    "source": [
-    "## 関数\n",
+    "# 関数\n",
     "\n",
     "何かひとまとまりの処理を書いた際には、その処理のためのコードをまとめて、プログラム全体の色々な箇所から再利用できるようにしておくと、便利な場合があります。\n",
     "ここでは、処理をひとまとめにする方法の一つとして**関数 (function)** を定義する方法を紹介します。"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "58ed6f64",
    "metadata": {
@@ -22,7 +24,7 @@
     "id": "RCB98_8xv9df"
    },
    "source": [
-    "### 関数を定義する\n",
+    "## 関数を定義する\n",
     "\n",
     "![関数の定義](images/02/02_10.png)\n",
     "\n",
@@ -130,6 +132,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1dfdd727",
    "metadata": {
@@ -137,7 +140,7 @@
     "id": "VDqeEdX5v9dj"
    },
    "source": [
-    "### 複数の引数をとる関数\n",
+    "## 複数の引数をとる関数\n",
     "\n",
     "複数の引数をとる関数を定義する場合は、関数名に続く `()` の中に、カンマ `,` 区切りで引数名を並べます。\n",
     "\n",
@@ -230,6 +233,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3e40993c",
    "metadata": {
@@ -237,7 +241,7 @@
     "id": "A8XpuE_av9dn"
    },
    "source": [
-    "### 引数をとらない関数\n",
+    "## 引数をとらない関数\n",
     "\n",
     "引数をとらない関数を定義する場合でも、関数名の後に `()` を加える必要があります。\n",
     "\n",
@@ -280,6 +284,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d23b17ed",
    "metadata": {
@@ -287,7 +292,7 @@
     "id": "BZGSKTbcv9do"
    },
    "source": [
-    "### 引数のデフォルト値\n",
+    "## 引数のデフォルト値\n",
     "\n",
     "引数には、あらかじめ値を与えておくことができます。\n",
     "これは、引数をとる関数を定義する際に、何も引数に値が渡されなかったときにどのような値がその引数に渡されたことにするかをあらかじめ決めておける機能で、その値のことを**デフォルト値**と呼びます。\n",
@@ -369,6 +374,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c52c3d83",
    "metadata": {
@@ -376,7 +382,7 @@
     "id": "DpwRYy4ov9dq"
    },
    "source": [
-    "### 返り値のある関数\n",
+    "## 返り値のある関数\n",
     "\n",
     "上で定義した足し算を行う関数 `add()` では、計算結果を表示するだけで、計算結果を呼び出し元に戻していませんでした。\n",
     "そのため、このままでは計算結果を関数の外から利用することができません。\n",
@@ -500,6 +506,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "38091b0f",
    "metadata": {
@@ -507,7 +514,7 @@
     "id": "BJnkcc_Qv9dt"
    },
    "source": [
-    "### 変数のスコープ\n",
+    "## 変数のスコープ\n",
     "\n",
     "関数の中で定義した変数は基本的には関数の外では利用できません。\n",
     "例えば、以下の例を見てみましょう。"
