文章の修正

--- a/ja-edited/01_Welcome_to_Chainer_Tutorial.ipynb
+++ b/ja-edited/01_Welcome_to_Chainer_Tutorial.ipynb
@@ -187,6 +187,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -197,7 +198,7 @@
     "上のセルに書き込まれているのは Python のコードで、与えられた文字列を表示する関数である `print()` に、`'Hello world!'` という文字列を渡しています。\n",
     "これを今実行したため、その結果が下に表示されています。\n",
     "\n",
-    "プログラミング言語の Python については、[次の章](https://tutorials.chainer.org/ja/02_Basics_of_Python.html) でより詳しく解説します。"
+    "プログラミング言語の Python については、[次の章](https://shinonome.io/PythonTutorialForDSCourse/ja-edited/02_01_Basics_of_Python_variable.html) でより詳しく解説します。"
    ]
   },
   {
