--- a/ja-edited/02_01_Basics_of_Python_variable.ipynb
+++ b/ja-edited/02_01_Basics_of_Python_variable.ipynb
@@ -2044,6 +2044,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "435a0548",
    "metadata": {
@@ -2051,9 +2052,7 @@
     "id": "6aq_3yNZv9c6"
    },
    "source": [
-    "`tuple` のように中身が変更できない性質のことを**イミュータブル (immutable)**であると言います。反対に、`list` のように中身が変更できる性質のことを**ミュータブル (mutable)**であると言います\n",
-    "\n",
-    "タプルも Chainer でデータセットを扱うときなどに頻出する型です。その性質と取り扱い方を覚えておきましょう。"
+    "`tuple` のように中身が変更できない性質のことを**イミュータブル (immutable)**であると言います。反対に、`list` のように中身が変更できる性質のことを**ミュータブル (mutable)**であると言います"
    ]
   },
   {
