--- a/ja-edited/08_Introduction_to_NumPy.ipynb
+++ b/ja-edited/08_Introduction_to_NumPy.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -9,13 +10,15 @@
    "source": [
     "# NumPy 入門\n",
     "\n",
-    "本章では、Python で数値計算を高速に行うためのライブラリ（[注釈1](#note1)）である NumPy の使い方を学びます。\n",
-    "本章の目標は、[単回帰分析と重回帰分析](https://tutorials.chainer.org/ja/07_Regression_Analysis.html)の章で学んだ重回帰分析を行うアルゴリズムを**NumPy を用いて実装すること**です。\n",
+    "本章では、Python で数値計算を高速に行うためのライブラリ [^ライブラリ] である NumPy の使い方を学びます。\n",
+    "本章の目標は、[単回帰分析と重回帰分析](https://tutorials.chainer.org/ja/07_Regression_Analysis.html) で解説されている重回帰分析を行うアルゴリズムを**NumPy を用いて実装すること**です。\n",
     "\n",
-    "NumPy による**多次元配列（multidimensional array）**の扱い方を知ることは、他の様々なライブラリを利用する際に役立ちます。\n",
-    "例えば、様々な機械学習手法を統一的なインターフェースで利用できる **scikit-learn** や、ニューラルネットワークの記述・学習を行うためのフレームワークである **Chainer** は、NumPy に慣れておくことでとても使いやすくなります。\n",
+    "NumPy による **多次元配列（multidimensional array）** の扱い方を知ることは、他の様々なライブラリを利用する際に役立ちます。\n",
+    "例えば、様々な機械学習手法を統一的なインターフェースで利用できる **scikit-learn** や、ニューラルネットワークの記述・学習を行うためのフレームワークである **PyTorch** は、NumPy に慣れておくことでとても使いやすくなります。\n",
     "\n",
-    "それでは、まず NumPy の基礎的な使用方法を説明します。"
+    "それでは、まず NumPy の基礎的な使用方法を説明します。\n",
+    "\n",
+    "[^ライブラリ]: ライブラリとは、汎用性の高い複数の関数やクラスなどを再利用可能な形でひとまとまりにしたもので、Python の世界では**パッケージ**とも呼ばれます。また、Python で関数やクラスの定義、文などが書かれたファイルのことを**モジュール**と呼び、パッケージはモジュールが集まったものです。"
    ]
   },
   {
@@ -58,6 +61,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -66,7 +70,7 @@
    "source": [
     "## 多次元配列を定義する\n",
     "\n",
-    "ベクトル・行列・テンソルなどは、プログラミング上は多次元配列により表現でき、NumPy では ndarray というクラスで多次元配列を表現します（[注釈2](#note2)）。早速、これを用いてベクトルを定義してみましょう。"
+    "ベクトル・行列・テンソルなどは、プログラミング上は多次元配列により表現でき、NumPy では ndarray というクラスで多次元配列を表現します。早速、これを用いてベクトルを定義してみましょう。"
    ]
   },
   {
@@ -189,6 +193,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -196,7 +201,7 @@
    },
    "source": [
     "これは、`len(a.shape)` と同じ値になります。\n",
-    "今、`a` という ndarray は 1 次元配列なので、`a.shape` は要素数が 1 のタプルで、`ndim` の値は 1 でした（[注釈3](#note3)）。"
+    "今、`a` という ndarray は 1 次元配列なので、`a.shape` は要素数が 1 のタプルで、`ndim` の値は 1 でした。"
    ]
   },
   {
@@ -1526,6 +1531,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -1534,7 +1540,7 @@
    "source": [
     "形が同じ行列同士の場合と同様に計算することができました。\n",
     "\n",
-    "これは NumPy が自動的に**ブロードキャスト（broadcast）**と呼ばれる操作を行っているためです。\n",
+    "これは NumPy が自動的に **ブロードキャスト（broadcast）** と呼ばれる操作を行っているためです。\n",
     "これについて次節で説明します。"
    ]
   },
@@ -1680,6 +1686,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -1690,10 +1697,10 @@
     "\n",
     "**形の異なる配列同士の計算がブロードキャストによって可能になるためにはルールがあります。**\n",
     "\n",
-    "それは、**「2 つの配列の各次元が同じ大きさになっているか、どちらかが 1 であること」**です。\n",
+    "それは、 **「2 つの配列の各次元が同じ大きさになっているか、どちらかが 1 であること」** です。\n",
     "このルールを満たさない場合、NumPy は \"ValueError: operands could not be broadcast together with shapes (1 つ目の配列の形) (2 つ目の配列の形)\" というエラーを出します。\n",
     "\n",
-    "ブロードキャストされた配列の各次元のサイズ（[注釈4](#note4)）は、入力された配列のその次元のサイズの中で最大の値と同じになっています。\n",
+    "ブロードキャストされた配列の各次元のサイズは、入力された配列のその次元のサイズの中で最大の値と同じになっています。\n",
     "入力された配列は、各次元のサイズが入力のうち大きい方のサイズと同じになるようブロードキャストされ、その拡張されたサイズで計算されます。\n",
     "\n",
     "もう少し具体例を見てみましょう。\n",
@@ -1762,6 +1769,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -1769,7 +1777,7 @@
    },
    "source": [
     "`a` の形は `(2, 1, 3)` で、`b` の形は `(3, 1)` でした。\n",
-    "この 2 つの配列の**末尾次元 (trailing dimension)**（[注釈5](#note5)） はそれぞれ 3 と 1 なので、ルールにあった「次元が同じサイズであるか、どちらかが 1 であること」を満たしています。\n",
+    "この 2 つの配列の**末尾次元 (trailing dimension)** はそれぞれ 3 と 1 なので、ルールにあった「次元が同じサイズであるか、どちらかが 1 であること」を満たしています。\n",
     "\n",
     "次に、各配列の第 2 次元に注目してみましょう。\n",
     "それぞれ 1 と 3 です。\n",
@@ -2595,6 +2603,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -2603,7 +2612,7 @@
    "source": [
     "## NumPy を用いた重回帰分析\n",
     "\n",
-    "[単回帰分析と重回帰分析](https://tutorials.chainer.org/ja/07_Regression_Analysis.html)の章で説明した重回帰分析を NumPy を用いて行いましょう。\n",
+    "[単回帰分析と重回帰分析](https://tutorials.chainer.org/ja/07_Regression_Analysis.html) で解説されている重回帰分析を NumPy を用いて行いましょう。\n",
     "\n",
     "4 つのデータをまとめた、以下のようなデザイン行列が与えられたとします。"
    ]
@@ -2931,13 +2940,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "XsIpR4_ehs43"
    },
    "source": [
-    "**以上の計算は、以下のように 1 行で行うこともできます。**"
+    "**以上の計算は、行列積の演算子 `@` を用いて 1 行で書くこともできます。**"
    ]
   },
   {
@@ -2967,7 +2977,7 @@
     }
    ],
    "source": [
-    "w_ = np.linalg.inv(X.T.dot(X)).dot(X.T).dot(t)\n",
+    "w_ = np.linalg.inv(X.T @ X) @ X.T @ t\n",
     "\n",
     "w_"
    ]
@@ -3022,56 +3032,6 @@
    },
    "source": [
     "数式を NumPy による配列の計算に落とし込むことに慣れていくには少し時間がかかりますが、慣れると少ない量のコードで記述できるだけでなく、高速に計算が行なえるため、大きな恩恵があります。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "ky_Jm7KjyEsx"
-   },
-   "source": [
-    "<hr />\n",
-    "\n",
-    "<div class=\"alert alert-info\">\n",
-    "**注釈 1**\n",
-    "\n",
-    "ライブラリとは、汎用性の高い複数の関数やクラスなどを再利用可能な形でひとまとまりにしたもので、Python の世界では**パッケージ**とも呼ばれます。また、Python で関数やクラスの定義、文などが書かれたファイルのことを**モジュール**と呼び、パッケージはモジュールが集まったものです。\n",
-    "\n",
-    "[▲上へ戻る](#ref_note1)\n",
-    "</div>\n",
-    "\n",
-    "<div class=\"alert alert-info\">\n",
-    "**注釈 2**\n",
-    "\n",
-    "NumPy には matrix というクラスも存在しますが、本チュートリアルでは基本的に多次元配列を表す ndarray をベクトルや行列を表すために用います。\n",
-    "\n",
-    "[▲上へ戻る](#ref_note2)\n",
-    "</div>\n",
-    "\n",
-    "<div class=\"alert alert-info\">\n",
-    "**注釈 3**\n",
-    "\n",
-    "これは、その多次元配列が表すテンソルの**階数（rank、以下ランク）**と対応します。\n",
-    "\n",
-    "[▲上へ戻る](#ref_note3)\n",
-    "</div>\n",
-    "\n",
-    "<div class=\"alert alert-info\">\n",
-    "**注釈 4**\n",
-    "    \n",
-    "「次元のサイズ」と言った場合はその次元の大きさを意味し、配列の `size` 属性とは異なるものを指しています。\n",
-    "\n",
-    "[▲上へ戻る](#ref_note4)\n",
-    "</div>\n",
-    "\n",
-    "<div class=\"alert alert-info\">\n",
-    "**注釈 5**\n",
-    "    \n",
-    "末尾次元（trailing dimension）とは、その配列の形を表すタプルの一番最後の値のことを指します。\n",
-    "\n",
-    "[▲上へ戻る](#ref_note5)\n",
-    "</div>"
    ]
   }
  ],
