--- a/ja-edited/11_Introduction_to_Pandas.ipynb
+++ b/ja-edited/11_Introduction_to_Pandas.ipynb
@@ -4410,6 +4410,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -4419,7 +4420,7 @@
     "## ndarray とデータフレームを相互に変換\n",
     "\n",
     "scikit-learn では、データフレームやシリーズをそのまま扱うことができます。\n",
-    "しかし、Chainer を含む他のライブラリやフレームワークではそのままでは扱うことができない場合もあります。\n",
+    "しかし、他のライブラリやフレームワークではそのままでは扱うことができない場合もあります。\n",
     "そこで、データフレームを NumPy の ndarray に変換する方法を紹介します。\n",
     "\n",
     "まず、`df` がデータフレームであることを確認します。"
@@ -4825,6 +4826,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -4834,7 +4836,7 @@
     "## グラフの描画\n",
     "\n",
     "データフレームオブジェクトから直接可視化のための機能を呼び出すことができます。\n",
-    "[次の章](https://tutorials.chainer.org/ja/12_Introduction_to_Matplotlib.html)で紹介する Matplotlib というグラフ描画ライブラリを `df.plot()` 機能を用いて利用することができます。"
+    "[次の章](https://shinonome.io/PythonTutorialForDSCourse/ja-edited/12_Introduction_to_Matplotlib.html)で紹介する Matplotlib というグラフ描画ライブラリを `df.plot()` 機能を用いて利用することができます。"
    ]
   },
   {
