--- a/ja-edited/11_Introduction_to_Pandas.ipynb
+++ b/ja-edited/11_Introduction_to_Pandas.ipynb
@@ -1741,7 +1741,7 @@
     }
    ],
    "source": [
-    "# df.iloc[行名, 列名]\n",
+    "# df.loc[行名, 列名]\n",
     "# 0 行目 longitude 列の選択\n",
     "df.loc[0, \"longitude\"]"
    ]
@@ -2931,7 +2931,6 @@
     "id": "wVdng5KDB5o1"
    },
    "source": [
-    "行や列を整数インデックスで選択する場合は `df.iloc[]` を使用しましたが、**列を名前で指定する**場合には `df.loc[]` を用います。\n",
     "それでは、上で計算したマスクと名前による列指定を組み合わせて、各条件を満たす行の `target` 列の値を書き換えます。"
    ]
   },
@@ -3126,7 +3125,7 @@
    "outputs": [],
    "source": [
     "# 欠損値を人為的に作成\n",
-    "df.iloc[0, 0] = None"
+    "df.loc[0, \"longitude\"] = None"
    ]
   },
   {
