--- a/_sources/ja-edited/09_Introduction_to_Scikit-learn.ipynb
+++ b/_sources/ja-edited/09_Introduction_to_Scikit-learn.ipynb
@@ -14,7 +14,7 @@
     "様々な機械学習の手法が統一的なインターフェースで利用できるようになっています。\n",
     "scikit-learn では NumPy の ndarray でデータやパラメータを取り扱うため、他のライブラリとの連携もしやすくなっています。\n",
     "\n",
-    "本章では、この scikit-learn というライブラリを用いて、**データを使ってモデルを訓練し、評価するという一連の流れを解説**し、Chainer を使ったディープラーニングの解説に入る前に、共通する重要な項目について説明します。\n",
+    "本章では、この scikit-learn というライブラリを用いて、**データを使ってモデルを訓練し、評価するという一連の流れを解説します**。\n",
     "\n",
     "機械学習の様々な手法を用いる際には、**データを使ってモデルを訓練する**までに、以下の **5 つのステップ**がよく共通して現れます。\n",
     "\n",
@@ -24,8 +24,7 @@
     "- Step 4：**最適化手法を選択する**\n",
     "- Step 5：**モデルを訓練する**\n",
     "\n",
-    "前章では、**ステップ 2** → **ステップ 3** → **ステップ 4 & 5** という **3 ステップ**に分けて説明を行いましたが、この 5 つのステップに分けて考える方法は、後の章で解説する **Chainer を用いたニューラルネットワークの訓練においても共通しています。**\n",
-    "また、上記の 5 つが完了した後には、通常、訓練済みモデルによるテストデータを用いた精度検証を行いますが、この点も共通しています。\n",
+    "上記の 5 つが完了した後には、通常、訓練済みモデルによるテストデータを用いた精度検証を行います。\n",
     "\n",
     "本章では、これらの 5 つのステップ + テストデータでの精度検証までを、scikit-learn の機能を使って簡潔に紹介します。"
    ]
@@ -162,6 +161,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -169,7 +169,7 @@
     "\n",
     "ここで、まずこのデータセットを 2 つに分割します。\n",
     "それは、モデルの訓練に用いるためのデータと、訓練後のモデルのパフォーマンスをテストするために用いるデータは、異なるものになっている必要があるためです。\n",
-    "これは、[機械学習に使われる数学](https://tutorials.chainer.org/ja/03_Basic_Math_for_Machine_Learning.html)の章で少しだけ触れた汎化性能というものに関わる重要なことです。\n",
+    "これは、[機械学習に使われる数学](https://shinonome.io/PythonTutorialForDSCourse/ja-edited/03_Basic_Math_for_Machine_Learning.html)の章で少しだけ触れた汎化性能というものに関わる重要なことです。\n",
     "\n",
     "ここで、例え話を使ってなぜデータセットを分割する必要があるかを説明します。\n",
     "例えば、大学受験の準備のために 10 年分の過去問を購入し、一部を**勉強のため**に、一部を**勉強の成果をはかる**ために使用したいとします。\n",
