update colab button description

--- a/ja-edited/01_Welcome_to_Chainer_Tutorial.ipynb
+++ b/ja-edited/01_Welcome_to_Chainer_Tutorial.ipynb
@@ -10,36 +10,22 @@
    "source": [
     "# はじめに\n",
     "\n",
-    "\n",
-    "このチュートリアルは、機械学習やディープラーニングの仕組みや使い方を理解したい**大学学部生**以上の方に向けて書かれたオンライン学習資料です\n",
-    "\n",
-    "機械学習の勉強を進めるために必要な数学の知識から、Python というプログラミング言語を用いたコーディングの基本、機械学習・ディープラーニングの基礎的な理論、画像認識や自然言語処理などに機械学習を応用する方法に至るまで、幅広いトピックを解説しています。\n",
-    "\n",
-    "機械学習を学び始めようとすると、ある程度、線形代数や確率統計といった数学の知識から、何らかのプログラミング言語が使えることなどが必要となってきます。\n",
-    "しかし、そういった数学やプログラミングの全てに精通していなければ機械学習について学び始められないかというと、必ずしもそうではありません。\n",
-    "\n",
-    "本チュートリアルでは、機械学習やディープラーニングに興味を持った方が、まず必要になる最低限の数学とプログラミングの知識から学び始められるように、資料を充実させています。\n",
-    "\n",
-    "そのため、できる限りこのサイト以外の教科書や資料を探さなくても、**このサイトだけで機械学習・ディープラーニングに入門できる**ことを目指して、作られています。初学者の方が「何から学び始めればいいのか」と迷うことなく学習を始められることを目指したサイトです。\n",
-    "\n",
-    "また、本チュートリアルの特徴として、資料の中に登場するコードが、Google Colaboratory というサービスを利用することで**そのままブラウザ上で実行できるようになっている**という点があります。\n",
-    "\n",
-    "ブラウザだけでコードを書き、実行して、結果を確認することができれば、説明に使われたサンプルコードを実行して結果を確かめるために、手元のコンピュータで環境構築を行う必要がなくなります。 \n",
-    "\n",
-    "本章ではまず、この **Google Colaboratory** というサービスの利用方法を説明します。"
+    "本教材は [Chainer チュートリアル](https://tutorials.chainer.org/ja/) をベースに作成されています。\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "TK3cXCQuBlpm"
    },
    "source": [
-    "## 必要なもの\n",
-    "\n",
-    "- Google アカウント（お持ちでない場合は、こちらからお作りください：[Google アカウントの作成](https://accounts.google.com/signup)）\n",
-    "- ウェブブラウザ（ Google Colaboratory はほとんどの主要なブラウザで動作します。PC 版の Chrome と Firefox では動作が検証されています。）"
+    "- 必要なもの\n",
+    "  - Google アカウント（お持ちでない場合は、こちらからお作りください：[Google アカウントの作成](https://accounts.google.com/signup)）\n",
+    "  - ウェブブラウザ（Google Colaboratory はほとんどの主要なブラウザで動作します。PC 版の Chrome と Firefox では動作が検証されています。）\n",
+    "  - GitHub アカウント（課題の提出に使用します。）\n",
+    "  - VSCode などのエディタ（課題のプログラムの実装に使用します。）"
    ]
   },
   {
@@ -63,53 +49,23 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "SNVvaFdwBlpn"
-   },
-   "source": [
-    "### Colab を開く\n",
-    "\n",
-    "まずは以下のURLにアクセスして、ブラウザで Colab を開いてください。\n",
-    "\n",
-    "[https://colab.research.google.com/](https://colab.research.google.com/)\n",
-    "\n",
-    "「Colaboratory へようこそ」というタイトルの Jupyter Notebook が表示されます。\n",
-    "\n",
-    "次に、タイトルの下にある 「ファイル」 から、「Python 3 の新しいノートブック」 を選択し、まっさらな Jupyter Notebook を作成しましょう。\n",
-    "\n",
-    "![create new notebook](images/01/01_create_new_notebook.png)\n",
-    "\n",
-    "Google アカウントにまだログインしていなかった場合は、以下のようなメッセージが表示されます。\n",
-    "\n",
-    "![please login](images/01/01_02.png)\n",
-    "\n",
-    "その場合は、「ログイン」 をクリックして、Google アカウントでログインしてください。\n",
-    "\n",
-    "ログインが完了すると、以下のような画面が表示され、準備完了です。\n",
-    "もうすでに Python を使ったプログラミングを開始する準備が整っています。\n",
-    "\n",
-    "![new python3 notebook](images/01/01_03.png)"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "SWEJAKWMBlpo"
    },
    "source": [
-    "### Open in Colab ボタン\n",
+    "### 教材を Colab で開く\n",
     "\n",
-    "このチュートリアルの一部の章には、`Open in Colab` と書かれた以下のようなボタンがページ上部に設置されています。\n",
+    "このチュートリアルの右上のロケット 🚀 のボタンにカーソルを重ねると、「`Colab`」というリンクが表示されます。\n",
     "\n",
-    "[![open in colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/chainer/tutorials/blob/master/ja/01_Welcome_to_Chainer_Tutorial_ja.ipynb)\n",
+    "![colab](./images/01/colab_button.png)\n",
     "\n",
-    "このボタンを押すと、ブラウザで見ている資料が、Colab 上で  Jupyter Notebook として開かれます。\n",
+    "このリンクをクリックすると、ブラウザで見ている資料が、Colab 上で  Jupyter Notebook として開かれます。\n",
     "すると、チュートリアルの中で説明に用いられているコードを、**実際に実行して結果を確認することができます。**\n",
     "\n",
-    "それでは、早速上のボタンか、このページの上部に配置されている `Open in Colab` ボタンを押して、このページを Colab で開いてください。  \n",
+    "それでは、早速このページの右上に配置されている `Colab` ボタンを押して、このページを Colab で開いてみましょう。  \n",
     "すると、`Playground モード` という編集不可な状態でノートブックが Colab 上で開かれます。\n",
     "そこで、下図の位置にある `ドライブにコピー` というボタンを押して、自分の Google Drive 上にこのノートブックをコピーしてください。\n",
     "このボタンを押すと、コピーされたノートブックが自動的に開き、以降は内容に編集を加えたり、コードを実行したりすることができます。\n",
@@ -118,7 +74,7 @@
     "\n",
     "この\n",
     "\n",
-    "1. `Open in Colab` から Colab へ移動\n",
+    "1. `Colab` ボタンから Colab へ移動\n",
     "2. 自分のドライブへノートブックをコピーする\n",
     "3. コードを実行しながら解説を読んでいく\n",
     "\n",
