誤字の修正

--- a/ja-edited/12_Introduction_to_Matplotlib.ipynb
+++ b/ja-edited/12_Introduction_to_Matplotlib.ipynb
@@ -235,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "次に、`pupulation` 列の値と `median_house_value` 列の値をそれぞれ横軸と縦軸にとった散布図を描画します。"
+    "次に、`population` 列の値と `median_house_value` 列の値をそれぞれ横軸と縦軸にとった散布図を描画します。"
    ]
   },
   {
@@ -289,7 +289,7 @@
     "\n",
     "データ中にどのような値がよく登場しているかという値ごとの頻度を確認するために使われるものに**ヒストグラム (histogram)** があります。\n",
     "\n",
-    "試しに、`median_house_values` 列の値のヒストグラムを描画してみましょう。"
+    "試しに、`median_house_value` 列の値のヒストグラムを描画してみましょう。"
    ]
   },
   {
